# pak

./: .gitignore  404.html  Cargo.toml  Makefile  README.md  index.html  pak  pak.lua  rocks.sh  sitemap.xml
commands/: index.html
docs/: book.toml  mkdocs.yml
docs/book/: index.html  print.html  project.html  searchindex.js  searchindex.json
docs/docs/: commands.md  gettingstarted.md  index.md  install.md  newproject.md  projectfile.md
docs/site/: 404.html
docs/src/: SUMMARY.md  index.md  installation.md  pakr.md  pakr_functions.md  pakr_install.md  project.md  scripts.md
epic/: README.txt  pak.project.json
epic/builds/: out.pkg
epic/payloads/cool/: cool.txt
example/: done.html  pak_conf.lua  postinstall  preinstall  welcome.html
examples/apperance/: pak.project.json
examples/basic/: pak.project.json
examples/components/: pak.project.json
gettingstarted/: index.html
install/: index.html
installer/: build.sh  done.html  pak.project.json
installer/scripts/: postinstall
modules/: build.lua  project.lua  serpent.lua  utils.lua
newproject/: index.html
pakcli/: Cargo.toml
pakcli/installer/: welcome.html
pakinstaller/: LICENSE  pak.project.json
pakinstaller/pak_scripts/: postinstall
pakinstaller/pakr_scripts/: postinstall
pakr/: Cargo.toml  README.md
pakr/src/: editor.rs  homepage.rs  main.rs  main_screen.rs  pak_cli.rs  project.rs  project_editor.rs  project_screen.rs  utils.rs  welcome.rs
projectfile/: index.html
search/: search_index.json
src/: main.rs  utils.rs
src/cli/: build.rs  init.rs  mod.rs
tools/: installer
(+10 files in other folders)
