[package]
name = "pakcli"
version = "0.2.1"
description = "pak is a tool for bundling MacOS software into installer packages"
homepage = "https://interfiber.dev/pak"
readme = "README.md"
repository = "https://github.com/Interfiber/pak"
license = "MIT"
edition = "2021"

[dependencies]
clap = "2.33.3"
serde_json = "1.0.71"
subprocess = "0.2.8"
spinners = "2.0.0"
fs_extra = "1.2.0"