[package]
name = "pakr"
description = "GUI frontend for pak"
version = "0.1.0"
homepage = "https://www.interfiber.dev/pak"
readme = "README.md"
repository = "https://github.com/Interfiber/pak/tree/main/pakr"
documentation = "https://www.interfiber.dev/projects/pak"
license = "MIT"
edition = "2021"

[dependencies]
iced = "0.3"
serde_json = "1.0.71"
subprocess = "0.2.8"
hashbrown = "0.11"